--- a/kamera.html
+++ b/kamera.html
@@ -1,224 +1,246 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>HP Kamera (Realtime Remote)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>HP KAMERA (Realtime Remote)</title>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <!-- Firebase compat (biar gampang) -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-<style>
-  body{margin:0;font-family:Arial;background:#0b1220;color:#fff}
-  header{padding:14px 16px;background:#111b33;font-weight:700}
-  .wrap{padding:14px;max-width:900px;margin:auto}
-  video{width:100%;border-radius:14px;background:#000}
-  .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-  button,input{
-    padding:12px 14px;border:0;border-radius:12px;width:100%;
-    background:#2a5bff;color:#fff;font-weight:700
-  }
-  button.secondary{background:#2b3248}
-  button.danger{background:#ff3b3b}
-  .card{background:#111b33;border-radius:14px;padding:12px;margin-top:12px}
-  .ok{color:#7CFF9C}
-  a{color:#9db6ff}
-  img{width:100%;border-radius:14px;margin-top:10px;display:none}
-</style>
+  <style>
+    body{margin:0;font-family:Arial;background:#0b1220;color:#fff}
+    header{padding:14px 16px;background:#111b33;font-weight:700}
+    .wrap{padding:14px;max-width:900px;margin:auto}
+    video{width:100%;border-radius:14px;background:#000}
+    .row{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+    button,input{padding:12px 14px;border:0;border-radius:12px;width:100%}
+    button{background:#2a5bff;color:#fff;font-weight:700;cursor:pointer}
+    button.secondary{background:#2b3248}
+    button.danger{background:#ff3b3b}
+    .card{background:#111b33;border-radius:14px;padding:12px;margin-top:12px}
+    .ok{color:#7CFF9C}
+    .warn{color:#FFD966}
+    a{color:#9bd6ff}
+  </style>
 </head>
 <body>
-<header>📷 HP KAMERA (Realtime Remote)</header>
+  <header>📷 HP KAMERA (Realtime Remote)</header>
 
-<div class="wrap">
-  <div class="card">
-    <b>PIN Room</b>
-    <input id="pin" placeholder="contoh: 1234" value="1234"/>
-    <div class="row">
-      <button id="btnJoin">✅ JOIN ROOM</button>
-      <button id="btnLeave" class="secondary">🚪 LEAVE</button>
+  <div class="wrap">
+    <div class="card">
+      <b>PIN Room</b>
+      <input id="pin" placeholder="contoh: 1234" value="1234" />
+      <div class="row">
+        <button id="btnJoin">✅ JOIN ROOM</button>
+        <button id="btnLeave" class="secondary">🚪 LEAVE</button>
+      </div>
+      <div id="status" style="margin-top:10px;opacity:.9">Belum join</div>
     </div>
-    <div id="status" style="margin-top:8px;opacity:.9"></div>
+
+    <div class="card">
+      <video id="video" autoplay playsinline muted></video>
+      <div class="row">
+        <button id="btnStartCam">🎥 START KAMERA</button>
+        <button id="btnSwitch" class="secondary">🔁 SWITCH</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="row">
+        <button id="btnShot">📸 FOTO</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="row">
+        <button id="btnRec" class="danger">⏺️ REKAM</button>
+        <button id="btnStop" class="secondary">⏹️ STOP</button>
+      </div>
+      <div style="margin-top:10px;opacity:.9">
+        Rekaman tersimpan <b>lokal di HP ini</b> (browser download / galeri).
+      </div>
+    </div>
   </div>
-
-  <video id="video" autoplay playsinline></video>
-
-  <div class="card">
-    <b>Hasil Foto</b>
-    <img id="photo" />
-    <a id="downloadPhoto" download="foto.jpg" style="display:none;">⬇️ Download Foto</a>
-  </div>
-
-  <div class="card">
-    <b>Hasil Video</b>
-    <video id="videoResult" controls style="width:100%;border-radius:14px;background:#000;display:none"></video>
-    <a id="downloadVideo" download="video.webm" style="display:none;">⬇️ Download Video</a>
-  </div>
-
-  <canvas id="canvas" style="display:none;"></canvas>
-</div>
 
 <script>
-  // ✅ firebaseConfig dari project kamu
+  // =========================
+  // 🔥 FIREBASE CONFIG (ISI PUNYA KAMU)
+  // =========================
   const firebaseConfig = {
-    apiKey: "AIzaSyBfNXj8JXz8hVMgQm2HY0YSyYv-aO75OAw",
-    authDomain: "camera-3547b.firebaseapp.com",
-    databaseURL: "https://camera-3547b-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "camera-3547b",
-    storageBucket: "camera-3547b.appspot.com",
-    messagingSenderId: "436520969909",
-    appId: "1:436520969909:web:f4ab1cef0b53bbed7940fc"
+    apiKey: "ISI_APIKEY_KAMU",
+    authDomain: "ISI_AUTHDOMAIN_KAMU",
+    databaseURL: "ISI_DATABASEURL_KAMU",
+    projectId: "ISI_PROJECTID_KAMU",
+    storageBucket: "ISI_STORAGEBUCKET_KAMU",
+    messagingSenderId: "ISI_MESSAGINGSENDERID_KAMU",
+    appId: "ISI_APPID_KAMU"
   };
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  const video = document.getElementById("video");
-  const canvas = document.getElementById("canvas");
-  const photo = document.getElementById("photo");
-  const downloadPhoto = document.getElementById("downloadPhoto");
-
-  const videoResult = document.getElementById("videoResult");
-  const downloadVideo = document.getElementById("downloadVideo");
-
+  // =========================
+  // ELEMENTS
+  // =========================
+  const videoEl = document.getElementById("video");
+  const pinEl = document.getElementById("pin");
   const statusEl = document.getElementById("status");
 
-  let stream = null;
-  let track = null;
   let roomRef = null;
+  let stream = null;
   let useFront = false;
 
+  // rekam
   let mediaRecorder = null;
   let chunks = [];
 
-  function setStatus(html){ statusEl.innerHTML = html; }
-
-  async function startCamera() {
-    stopCamera();
-    stream = await navigator.mediaDevices.getUserMedia({
-      video: { facingMode: useFront ? "user" : "environment" },
-      audio: true
-    });
-    video.srcObject = stream;
-    track = stream.getVideoTracks()[0];
+  function setStatus(html){
+    statusEl.innerHTML = html;
   }
 
-  function stopCamera() {
-    if (stream) stream.getTracks().forEach(t => t.stop());
-    stream = null;
-    track = null;
-    video.srcObject = null;
+  function getPin(){
+    return pinEl.value.trim();
   }
 
-  function takePhoto() {
-    if (!video.videoWidth) return;
-
-    canvas.width = video.videoWidth;
-    canvas.height = video.videoHeight;
-
-    const ctx = canvas.getContext("2d");
-    ctx.drawImage(video, 0, 0);
-
-    const dataUrl = canvas.toDataURL("image/jpeg", 0.92);
-    photo.src = dataUrl;
-    photo.style.display = "block";
-
-    downloadPhoto.href = dataUrl;
-    downloadPhoto.style.display = "inline-block";
+  function sendCmd(cmd){
+    if(!roomRef) return alert("JOIN ROOM dulu!");
+    roomRef.child("cmd").set(cmd);
+    roomRef.child("last_remote").set(Date.now());
   }
 
-  async function switchCamera() {
-    useFront = !useFront;
-    await startCamera();
+  async function startCamera(){
+    try{
+      if(stream){
+        stream.getTracks().forEach(t => t.stop());
+        stream = null;
+      }
+
+      stream = await navigator.mediaDevices.getUserMedia({
+        video: { facingMode: useFront ? "user" : "environment" },
+        audio: true
+      });
+
+      videoEl.srcObject = stream;
+
+      if(roomRef){
+        roomRef.child("camera_online").set(true);
+        roomRef.child("camera_last_seen").set(Date.now());
+      }
+
+      setStatus("✅ Kamera ON");
+    }catch(e){
+      setStatus("❌ Kamera gagal: " + e.message);
+    }
   }
 
-  function startRecording() {
-    if (!stream) return;
-
-    chunks = [];
-    mediaRecorder = new MediaRecorder(stream, { mimeType: "video/webm" });
-
-    mediaRecorder.ondataavailable = (e) => {
-      if (e.data.size > 0) chunks.push(e.data);
-    };
-
-    mediaRecorder.onstop = () => {
-      const blob = new Blob(chunks, { type: "video/webm" });
-      const url = URL.createObjectURL(blob);
-      videoResult.src = url;
-      videoResult.style.display = "block";
-      downloadVideo.href = url;
-      downloadVideo.style.display = "inline-block";
-    };
-
-    mediaRecorder.start();
+  async function takePhoto(){
+    if(!stream) return alert("Kamera belum ON!");
+    // hanya trigger command biar remote tahu
+    sendCmd("SHOT");
+    alert("✅ Foto diambil (fitur simpan foto otomatis butuh upgrade lanjut).");
   }
 
-  function stopRecording() {
-    if (mediaRecorder && mediaRecorder.state !== "inactive") {
+  function startRecord(){
+    if(!stream) return alert("Kamera belum ON!");
+    try{
+      chunks = [];
+      mediaRecorder = new MediaRecorder(stream, { mimeType: "video/webm" });
+
+      mediaRecorder.ondataavailable = (e) => {
+        if(e.data && e.data.size > 0) chunks.push(e.data);
+      };
+
+      mediaRecorder.onstop = () => {
+        const blob = new Blob(chunks, { type: "video/webm" });
+        const url = URL.createObjectURL(blob);
+
+        // auto download
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "rekaman_" + getPin() + "_" + Date.now() + ".webm";
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+
+        setStatus("✅ Rekaman selesai & tersimpan ke HP (Download)");
+      };
+
+      mediaRecorder.start();
+      setStatus("⏺️ Sedang merekam...");
+    }catch(e){
+      setStatus("❌ Rekam gagal: " + e.message);
+    }
+  }
+
+  function stopRecord(){
+    if(mediaRecorder && mediaRecorder.state !== "inactive"){
       mediaRecorder.stop();
     }
   }
 
-  async function setTorch(on) {
-    if (!track || !track.applyConstraints) return;
-    const caps = track.getCapabilities ? track.getCapabilities() : {};
-    if (!caps.torch) return;
-    try {
-      await track.applyConstraints({ advanced: [{ torch: !!on }] });
-    } catch (e) {}
-  }
-
-  function resetCmd() {
-    if (roomRef) roomRef.child("cmd").set("");
-  }
-
-  async function joinRoom() {
-    const pin = document.getElementById("pin").value.trim();
-    if (!pin) return alert("Isi PIN dulu");
+  // =========================
+  // JOIN / LEAVE
+  // =========================
+  document.getElementById("btnJoin").onclick = () => {
+    const pin = getPin();
+    if(!pin) return alert("Isi PIN dulu");
 
     roomRef = db.ref("rooms/" + pin);
 
-    await roomRef.child("camera_online").set(true);
-    await roomRef.child("last_seen").set(Date.now());
+    roomRef.child("camera_online").set(true);
+    roomRef.child("camera_last_seen").set(Date.now());
 
-    setStatus(`✅ Kamera join room: <span class="ok"><b>${pin}</b></span>`);
+    // dengarkan perintah remote
+    roomRef.child("cmd").on("value", (s) => {
+      const cmd = s.val();
+      if(!cmd) return;
 
-    await startCamera();
-
-    roomRef.child("cmd").on("value", async (snap) => {
-      const cmd = snap.val();
-      if (!cmd) return;
-
-      if (cmd === "SHOT") takePhoto();
-      if (cmd === "SWITCH") await switchCamera();
-      if (cmd === "REC_START") startRecording();
-      if (cmd === "REC_STOP") stopRecording();
-      if (cmd === "TORCH_ON") await setTorch(true);
-      if (cmd === "TORCH_OFF") await setTorch(false);
-
-      resetCmd();
+      if(cmd === "SWITCH"){
+        useFront = !useFront;
+        startCamera();
+      }
+      if(cmd === "SHOT"){
+        // bisa nanti upgrade auto simpan foto
+      }
+      if(cmd === "REC_START"){
+        startRecord();
+      }
+      if(cmd === "REC_STOP"){
+        stopRecord();
+      }
+      if(cmd === "TORCH_ON"){
+        alert("Torch ON belum support semua HP via browser.");
+      }
+      if(cmd === "TORCH_OFF"){
+        alert("Torch OFF belum support semua HP via browser.");
+      }
     });
-  }
 
-  async function leaveRoom() {
-    stopRecording();
-    stopCamera();
-    if (roomRef) {
-      await roomRef.child("camera_online").set(false);
-      roomRef.child("cmd").off();
+    setStatus(`✅ JOIN room <b class="ok">${pin}</b>`);
+  };
+
+  document.getElementById("btnLeave").onclick = () => {
+    if(roomRef){
+      roomRef.child("camera_online").set(false);
+      roomRef.off();
       roomRef = null;
     }
-    setStatus("🚪 Keluar room.");
-  }
+    setStatus("🚪 Keluar room");
+  };
 
-  document.getElementById("btnJoin").onclick = joinRoom;
-  document.getElementById("btnLeave").onclick = leaveRoom;
-
-  window.addEventListener("beforeunload", async () => {
-    try {
-      if (roomRef) await roomRef.child("camera_online").set(false);
-    } catch(e) {}
-  });
+  // =========================
+  // BUTTONS
+  // =========================
+  document.getElementById("btnStartCam").onclick = startCamera;
+  document.getElementById("btnSwitch").onclick = () => {
+    useFront = !useFront;
+    startCamera();
+  };
+  document.getElementById("btnShot").onclick = takePhoto;
+  document.getElementById("btnRec").onclick = () => sendCmd("REC_START");
+  document.getElementById("btnStop").onclick = () => sendCmd("REC_STOP");
 </script>
 
 </body>
