--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       const pin = getPin();
       if(!pin) return alert("Isi PIN dulu");
       // ✅ FIX: jangan pakai ../
-      location.href = "remote.html?pin=" + encodeURIComponent(pin);
+      location.href = "iremote.html?pin=" + encodeURIComponent(pin);
     };
 
     // auto isi PIN dari link
@@ -108,3 +108,4 @@
   </script>
 </body>
 </html>
+
